--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     />
   </head>
   <body>
-    <section>
+    <div class="wrapper">
+    <section class="container-left">
     <h1>Easy Shopping Via Mobile</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem
@@ -25,13 +26,15 @@
     </p>
     <button>Get Started</button>
     </section>
-    <section>
+    <section class="container-right">
         <header>
             <a href="#">Home</a>
             <a href="#">Work</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </header>
+        <img src="img/Illustration-3-3.png" alt="girl-cellphone">
     </section>
+    </div>
   </body>
 </html>
